--- a/backend/movie-service/Dockerfile
+++ b/backend/movie-service/Dockerfile
@@ -1,8 +1,8 @@
-FROM eclipse-temurin:17-jdk AS build
+FROM maven:3.8.4-openjdk-17-slim AS build
 WORKDIR /app
 COPY pom.xml .
 COPY src src
-RUN apt-get update && apt-get install -y maven && mvn package -DskipTests
+RUN mvn package -DskipTests
 
 FROM eclipse-temurin:17-jre
 WORKDIR /app
