--- a/.github/workflows/deploy-gcp.yml
+++ b/.github/workflows/deploy-gcp.yml
@@ -10,7 +10,41 @@ env:
   REPOSITORY: cineior-repo
 
 jobs:
+  setup:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: 'read'
+      id-token: 'write'
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Google Auth
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: '${{ secrets.GCP_SA_KEY }}'
+
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@v2
+
+      - name: Enable GCP APIs
+        run: |
+          gcloud services enable artifactregistry.googleapis.com run.googleapis.com --quiet
+
+      - name: Ensure Artifact Registry exists
+        run: |
+          if ! gcloud artifacts repositories describe ${REPOSITORY} --location=${REGION} &>/dev/null; then
+            echo "Creating repository ${REPOSITORY}..."
+            gcloud artifacts repositories create ${REPOSITORY} \
+              --repository-format=docker \
+              --location=${REGION} \
+              --description="Docker repository for Cineior services"
+          else
+            echo "Repository ${REPOSITORY} already exists."
+          fi
+
   deploy:
+    needs: setup
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -46,20 +80,6 @@ jobs:
       - name: Set up Cloud SDK
         uses: google-github-actions/setup-gcloud@v2
 
-      - name: Enable GCP APIs
-        run: |
-          gcloud services enable artifactregistry.googleapis.com run.googleapis.com --quiet
-
-      - name: Ensure Artifact Registry exists
-        run: |
-          if ! gcloud artifacts repositories describe ${REPOSITORY} --location=${REGION} &>/dev/null; then
-            echo "Creating repository ${REPOSITORY}..."
-            gcloud artifacts repositories create ${REPOSITORY} \
-              --repository-format=docker \
-              --location=${REGION} \
-              --description="Docker repository for Cineior services"
-          fi
-
       - name: Configure Docker
         run: |
           gcloud auth configure-docker ${REGION}-docker.pkg.dev --quiet
@@ -68,7 +88,8 @@ jobs:
         run: |
           IMAGE_NAME="${REGION}-docker.pkg.dev/${PROJECT_ID}/${REPOSITORY}/${{ matrix.service }}:${{ github.sha }}"
           echo "Building image: $IMAGE_NAME"
-          docker build -t $IMAGE_NAME ${{ matrix.folder }}
+          # Using --no-cache to ensure a clean build for troubleshooting
+          docker build --no-cache -t $IMAGE_NAME ${{ matrix.folder }}
 
       - name: Push Container
         run: |
