--- a/.github/workflows/deploy-gcp.yml
+++ b/.github/workflows/deploy-gcp.yml
@@ -98,4 +98,11 @@ jobs:
             --allow-unauthenticated \
             --max-instances 1 \
             --port ${{ matrix.port }} \
-            --set-env-vars "SPRING_PROFILES_ACTIVE=prod"
+            --set-env-vars "SPRING_PROFILES_ACTIVE=prod" \
+            --set-env-vars "SPRING_DATASOURCE_URL=${{ secrets.SPRING_DATASOURCE_URL }}" \
+            --set-env-vars "SPRING_DATASOURCE_USERNAME=${{ secrets.SPRING_DATASOURCE_USERNAME }}" \
+            --set-env-vars "SPRING_DATASOURCE_PASSWORD=${{ secrets.SPRING_DATASOURCE_PASSWORD }}" \
+            --set-env-vars "JWT_SECRET=${{ secrets.JWT_SECRET }}" \
+            --set-env-vars "TMDB_API_KEY=${{ secrets.TMDB_API_KEY }}" \
+            --set-env-vars "GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}" \
+            --set-env-vars "GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}"
